--- a/css/reveal-override.css
+++ b/css/reveal-override.css
@@ -3,7 +3,7 @@ body {
   /* background: linear-gradient(0deg, rgba(97,140,189,1) 0%, rgba(212,228,247,1) 20%, rgba(212,228,247,1) 80%, rgba(97,140,189,1) 100%); */
   background-color: rgb(212,228,247);
   /* background-image: url(/img/logo.png), radial-gradient(circle, rgba(212,228,247,1) 80%, rgba(97,140,189,1) 100%); */
-  background-image: url(/img/logo.png), radial-gradient(circle, rgba(255,255,255,1) 75%, rgba(200,200,200,1) 100%);
+  background-image: url(../img/logo.png), radial-gradient(circle, rgba(255,255,255,1) 75%, rgba(200,200,200,1) 100%);
   background-size: 20%, cover;
   background-repeat: no-repeat;
   background-position: 0% 100%;
