--- a/css/reveal-override.css
+++ b/css/reveal-override.css
@@ -1,8 +1,5 @@
 body {
-  /* background: rgb(97,140,189); */
-  /* background: linear-gradient(0deg, rgba(97,140,189,1) 0%, rgba(212,228,247,1) 20%, rgba(212,228,247,1) 80%, rgba(97,140,189,1) 100%); */
   background-color: rgb(212,228,247);
-  /* background-image: url(/img/logo.png), radial-gradient(circle, rgba(212,228,247,1) 80%, rgba(97,140,189,1) 100%); */
   background-image: url(../img/logo.png), radial-gradient(circle, rgba(255,255,255,1) 75%, rgba(200,200,200,1) 100%);
   background-size: 20%, cover;
   background-repeat: no-repeat;
@@ -10,7 +7,6 @@ body {
 }
 
 .reveal {
-  /* color: #190934; */
   color: #427fbf;
 }
 
@@ -20,7 +16,6 @@ body {
 .reveal h4,
 .reveal h5,
 .reveal h6 {
-  /* color: #183BF0; */
   color: #634da0;
 }
 
@@ -29,10 +24,18 @@ body {
 }
 
 .reveal .controls .controls-arrow {
-  /* color: #183BF0; */
   color: #634da0;
 }
 
 .reveal .progress {
   color: #427fbf;
+}
+
+#fullscreen-button {
+  position: absolute;
+  right: 12px;
+  top: 12px;
+  font-size: 2.6em;
+  color: #634da0;
+  cursor: pointer;
 }
